KOGITO-6598: Add integration tests at apps-integration-test-data-inde… (#1382)
* KOGITO-6598: data index integration test, add oracle persistence and enable native testing

* Removed NativeProcessDataIndex*IT.java tests and avoid native builds in data-index docker images